[metadata]
name = UniOpt
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/UniOpt.py
description = A wrapper for popular black box optimization libraries providing unified interface
long_description = file: ReadMe.md
keywords = hyperparameter optimization, black box optimization
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Science

[options]
python_requires = >=3.4
zip_safe = True
packages = UniOpt, UniOpt.core, UniOpt.backends
setup_requires = setuptools_scm;
test_suite = tests.tests
install_requires = 
	numpy
	scipy
	scikit_learn
	lazy_object_proxy
	lazily @ git+https://gitlab.com/KOLANICH/lazily.py.git

[options.extras_require]
TQDMProgressReporter = tqdm @ git+https://github.com/tqdm/tqdm.git
hyperopt = hyperopt @ git+https://github.com/hyperopt/hyperopt.git
hyperband = hyperband
hyperengine = hyperengine @ git+https://github.com/maxim5/hyper-engine.git
GPyOpt = GPyOpt @ git+https://github.com/SheffieldML/GPyOpt.git
SKOpt = scikit-optimize @ git+https://github.com/scikit-optimize/scikit-optimize.git
SMAC = smac @ git+https://github.com/automl/SMAC3.git
BeeColony = ecabc @ git+https://github.com/ECRL/ecabc.git
optunity = optunity @ git+https://github.com/claesenm/optunity.git
Yabox = yabox @ git+https://github.com/pablormier/yabox.git
PySHAC = pyshac @ git+https://github.com/titu1994/pyshac.git
RBFOpt = rbfopt @ git+https://github.com/coin-or/rbfopt.git
Bayessian = bayesian_optimization @ git+https://github.com/fmfn/BayesianOptimization.git
SOpt = sopt @ git+https://github.com/Lyrichu/sopt.git@43cfc8fe39d5d05ad01db626dd777e4ce3e8d14e
pySOT = pySOT @ git+https://github.com/dme65/pySOT.git
BayTune = baytune @ git+https://github.com/HDI-Project/BTB.git
RoBO = RoBO @ git+https://github.com/KOLANICH/RoBO.git@optional_pybnn
EvoStra = evostra @ git+https://github.com/alirezamika/evostra.git
